fix(sponsor_logo): Fix the broken layout due to bg-deco image

--- a/src/static/pycontw-2020/styles/_index-partners.scss
+++ b/src/static/pycontw-2020/styles/_index-partners.scss
@@ -22,7 +22,7 @@ h2 {
 
 		.deco-a-1 {
 			top: 2%;
-			right: -5%;
+			right: 2%;
 		}
 
 		.deco-a-2 {
@@ -32,7 +32,7 @@ h2 {
 
 		.deco-a-3 {
 			bottom: -1%;
-			right: -8%;
+			right: 3%;
 		}
 
 		@include on-desktop {
